rust_writer_procedural/tests/ui/mutator_fails_if_attr_key_value_not_local.stderr
error: Expected 'local' as key.
 --> tests/ui/mutator_fails_if_attr_key_value_not_local.rs:5:60
  |
5 | #[mutator(rust_writer::ast::implementors::ItemToTrait<'a>, invalid = path)]
  |                                                            ^^^^^^^
